fixed spacing around the page.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-/* justify-content align-items */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0; 
+}
 
 body {
     display: flex;
@@ -23,7 +27,7 @@ body {
     font-weight: bold;
     color: #F9FAF8;
     margin-right: auto;
-    padding: 25px 10px;
+    padding: 25px 40px;
 }
 
 
@@ -32,7 +36,7 @@ ul {
     list-style-type: none;
     align-items: baseline;
     margin: 0;
-    padding: 0;
+    padding: 0px 40px;
 }
 
 .lright {
@@ -55,7 +59,7 @@ a {
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin-left: 10px;
 }
 
@@ -70,7 +74,8 @@ a {
     font-size: 18px;
     color: #E5E7EB;
     flex-wrap: wrap;
-    flex: 2;
+    flex: 1;
+    text-align: center;
 }
 
 button {
@@ -118,9 +123,10 @@ button {
 
 .info {
     display: flex;
+    flex-direction: column;
     flex: 1;
     flex-wrap: wrap;
-    justify-content: space-around;
+    align-items: center;
     margin: 16px;
 }
 
